src/test/resources/repos/invalid-binary-desc-subjects/daa/b38/aaf/daab38aaf09161bfb363c09076024a4d0a981173c39d03d3c77ab2f2f62e6414/v5/inventory.json.sha512
f6ec7c2d25c23b1af185d02c9f81a7047dbd7efa499d8ece8fe4f684b3d3e42459feb0170f67dd56737eb46dde993ff88c84837a361ac52668ff12f78d2d0cf9	inventory.json